// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar  image avatar snapshot 1`] = `
<WithStyles(HvAvatar)
  imgProps={
    Object {
      "onError": [Function],
      "other": "my value",
    }
  }
  src="something.jpg"
>
  <HvAvatar
    classes={
      Object {
        "L": "HvAvatar-L",
        "M": "HvAvatar-M",
        "S": "HvAvatar-S",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
      }
    }
    imgProps={
      Object {
        "onError": [Function],
        "other": "my value",
      }
    }
    src="something.jpg"
  >
    <WithStyles(ForwardRef(Avatar))
      className="HvAvatar-root HvAvatar-S"
      style={Object {}}
    >
      <ForwardRef(Avatar)
        className="HvAvatar-root HvAvatar-S"
        classes={
          Object {
            "circle": "MuiAvatar-circle",
            "colorDefault": "MuiAvatar-colorDefault",
            "fallback": "MuiAvatar-fallback",
            "img": "MuiAvatar-img",
            "root": "MuiAvatar-root",
            "rounded": "MuiAvatar-rounded",
            "square": "MuiAvatar-square",
          }
        }
        style={Object {}}
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle HvAvatar-root HvAvatar-S MuiAvatar-colorDefault"
          style={Object {}}
        >
          <img
            className="HvAvatar-img"
            onError={[Function]}
            other="my value"
            src="something.jpg"
          />
        </div>
      </ForwardRef(Avatar)>
    </WithStyles(ForwardRef(Avatar))>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  letter avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "L": "HvAvatar-L",
        "M": "HvAvatar-M",
        "S": "HvAvatar-S",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
      }
    }
  >
    <WithStyles(ForwardRef(Avatar))
      className="HvAvatar-root HvAvatar-S"
      style={
        Object {
          "backgroundColor": "#414141",
          "color": "#FFFFFF",
        }
      }
    >
      <ForwardRef(Avatar)
        className="HvAvatar-root HvAvatar-S"
        classes={
          Object {
            "circle": "MuiAvatar-circle",
            "colorDefault": "MuiAvatar-colorDefault",
            "fallback": "MuiAvatar-fallback",
            "img": "MuiAvatar-img",
            "root": "MuiAvatar-root",
            "rounded": "MuiAvatar-rounded",
            "square": "MuiAvatar-square",
          }
        }
        style={
          Object {
            "backgroundColor": "#414141",
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle HvAvatar-root HvAvatar-S MuiAvatar-colorDefault"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FFFFFF",
            }
          }
        >
          OT
        </div>
      </ForwardRef(Avatar)>
    </WithStyles(ForwardRef(Avatar))>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;
